<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dit i fet</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="welcometo">WELCOME TO</string>
    <string name="business">PIZZAGBAR</string>
    <string name="customerName">JOHN DOE</string>    
    <string name="orderStatus">ORDER STATUS:</string>
    <string name="ready">READY</string>       
    <string name="randomOrder">00042</string> 
	<string name="pickUpText">Show this number at the cashier and checkout</string> 
	<string name="orderNum">ORDER #00042</string>
	<string name="moneyzCost">13.37€</string>
	<string name="thankyou">THANK YOU</string>
	<string name="seeyou">SEE YOU NEXT TIME</string>
</resources>
