<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codecats.ditifet.MainActivity"
    tools:deviceIds="wear_square" 
    android:background="@drawable/bcn2">

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80ffffff"
        android:layout_margin="10dp"
        >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/welcomeContainer"
        >
	        <!-- 	        android:textColor="#89869D"   -->
	    <TextView
	        android:id="@+id/welcomeString"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/welcometo" 
	        android:textSize="26sp"
	        android:layout_marginTop="8sp"
	        android:layout_gravity="center_horizontal"
	        android:layout_centerHorizontal="true"      
	        android:textColor="#FFFFFF"  
	        />    
	        
    	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#44000000"
	        android:layout_marginLeft="20sp"
	        android:layout_marginRight="20sp"	 
	        android:layout_below="@+id/welcomeString"  
	        android:gravity="center_horizontal"
	        >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/businessString"
	            android:textSize="24sp"
	            android:layout_margin="2sp"
	            android:textStyle="bold"
	            android:text="@string/business"
	            />
	        
	    </RelativeLayout>  	    

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="22sp"
	        android:textColor="#FFFFFF"  
		    android:text="@string/customerName"
		    android:layout_alignParentBottom="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginBottom="30sp"
		    >
		    
		    
		</TextView>
    	    
        
	</RelativeLayout>    
	
    
  
    
	</RelativeLayout>    	

    
</RelativeLayout>    