<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcn2"
    android:orientation="vertical"
    tools:context="com.codecats.ditifet.TicketScreen"
    tools:deviceIds="wear_square" 
    android:id="@+id/allContainer"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#80ffffff" >

        <RelativeLayout
            android:id="@+id/ticketContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" >

            <!-- android:textColor="#89869D" -->



           <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#44000000"

                android:id="@+id/grayContainer"
                >

                <TextView
                    android:id="@+id/otherStatuss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginLeft="2sp"
                    android:text="@string/thankyou"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    />
                
                <TextView
                    android:id="@+id/nameClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-2sp"
                    android:layout_marginRight="2sp"
                    android:layout_marginLeft="2sp"
                    android:text="@string/customerName"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/otherStatuss"
                    android:textStyle="bold"                    
                    />
                

                
            </RelativeLayout>
            
                <TextView
                    android:id="@+id/seeyou"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seeyou"
                    android:textSize="24sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/grayContainer"
                    android:gravity="center"
                    />           
           
           <ImageView 
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/petit_logo"
               android:layout_alignParentRight="true"
               android:layout_alignParentBottom="true"
               />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>